Plantilla de listados

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
-{% extends 'home.html' %}
+{% extends 'body.html' %}
 
 {% block content %}
     <P>
-        Hola a todos, esta es una prueba para practicar mis habilidades de mecanografía
+        Aquí van a ir más cosas
     </P>
 {% endblock %}
