--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -1,9 +1,8 @@
-  <!-- Main Footer -->
-  <footer class="main-footer">
-    <!-- To the right -->
+<footer class="main-footer">
+
     <div class="float-right d-none d-sm-inline">
-      Anything you want
+        Anything you want
     </div>
-    <!-- Default to the left -->
-    <strong>Copyright &copy; 2014-2020 <a href="https://adminlte.io">AdminLTE.io</a>.</strong> All rights reserved.
-  </footer>
+
+    <strong>Copyright &copy; 2014-2019 <a href="https://adminlte.io">AdminLTE.io</a>.</strong> Made by González
+</footer>
