--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>AdminLTE 3 | Top Navigation</title>
+    <title>{{ title }}</title>
 
     <!-- Google Font: Source Sans Pro -->
     <link rel="stylesheet"
@@ -13,36 +13,14 @@
     <link rel="stylesheet" href="{% static 'lib/adminlte-3.1/plugins/fontawesome-free/css/all.min.css' %}">
     <!-- Theme style -->
     <link rel="stylesheet" href="{% static 'lib/adminlte-3.1/css/adminlte.min.css' %}">
+    <!-- jQuery -->
+    <script src="{% static 'lib/adminlte-3.1/plugins/jquery/jquery.min.js' %}"></script>
+    <!-- Bootstrap 4 -->
+    <script src="{% static 'lib/adminlte-3.1/plugins/bootstrap/js/bootstrap.bundle.js'%}"></script>
+    <!-- AdminLTE App -->
+    <script src="{% static 'lib/adminlte-3.1/js/adminlte.min.js' %}"></script>
 </head>
-<body class="hold-transition layout-top-nav">
-<div class="wrapper">
+{% block body %}
 
-    {% include 'header.html' %}
-
-    <div class="content-wrapper">
-        {% block content %}
-
-        {% endblock %}
-    </div>
-
-    <aside class="control-sidebar control-sidebar-dark">
-
-        <div class="p-3">
-            <h5>Title</h5>
-            <p>Sidebar content</p>
-        </div>
-    </aside>
-
-
-    {% include 'footer.html' %}
-</div>
-
-
-<!-- jQuery -->
-<script src="{% static 'lib/adminlte-3.1/plugins/jquery/jquery.min.js' %}"></script>
-<!-- Bootstrap 4 -->
-<script src="{% static 'lib/adminlte-3.1/plugins/bootstrap/js/bootstrap.bundle.min' %}"></script>
-<!-- AdminLTE App -->
-<script src="{% static 'lib/adminlte-3.1/js/adminlte.min.js' %}"></script>
-</body>
+{% endblock %}
 </html>
