--- a/app/core/erp/templates/category/create.html
+++ b/app/core/erp/templates/category/create.html
@@ -6,16 +6,18 @@
             <div class="card-header">
                 <h3 class="card-title">
                     <i class="fas fa-plus"> </i>
-                     {{ title }}
+                    {{ title }}
                 </h3>
             </div>
             <!-- /.card-header -->
             <div class="card-body">
                 {% csrf_token %}
-                <div class="form-group">
-                    <label for="email">{{ form.name.label }}</label>
-
-                </div>
+                {% for field in form.visible_fields %}
+                    <div class="form-group">
+                        <label for="email">{{ field.label }}</label>
+                        {{ field }}
+                    </div>
+                {% endfor %}
             </div>
             <div class="card-footer">
                 <button type="submit" class="btn btn-primary btn-flat">
