--- a/app/core/erp/templates/category/list.html
+++ b/app/core/erp/templates/category/list.html
@@ -4,6 +4,7 @@
     <tr>
         <th scope="col">Número</th>
         <th scope="col">Nombre</th>
+        <th scope="col">Descripción</th>
         <th scope="col">Acciones</th>
     </tr>
 {% endblock %}
@@ -14,6 +15,7 @@
         <tr>
             <td>{{ c.id }}</td>
             <td>{{ c.name }}</td>
+            <td>{{ c.desc }}</td>
             <td>
                 <button type="button" class="btn btn-success btn-sm"><i class="far fa-edit"></i></button>
                 <button type="button" class="btn btn-danger btn-sm"><i class="far fa-trash-alt"></i>
