--- a/app/core/erp/templates/category/create.html
+++ b/app/core/erp/templates/category/create.html
@@ -1,29 +1,1 @@
-{% extends 'body.html' %}
-{% load static %}
-{% block content %}
-    <form method="post">
-        <div class="card card-default">
-            <div class="card-header">
-                <h3 class="card-title">
-                    <i class="fas fa-plus"> </i>
-                    {{ title }}
-                </h3>
-            </div>
-            <!-- /.card-header -->
-            <div class="card-body">
-                {% csrf_token %}
-                {% for field in form.visible_fields %}
-                    <div class="form-group">
-                        <label for="email">{{ field.label }}</label>
-                        {{ field }}
-                    </div>
-                {% endfor %}
-            </div>
-            <div class="card-footer">
-                <button type="submit" class="btn btn-primary btn-flat">
-                    <i class="fas fa-save"></i> Guardar Registro
-                </button>
-            </div>
-        </div>
-    </form>
-{% endblock %}
+{% extends 'form.html' %}
