--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -19,6 +19,8 @@
     <script src="{% static 'lib/adminlte-3.1/plugins/bootstrap/js/bootstrap.bundle.js'%}"></script>
     <!-- AdminLTE App -->
     <script src="{% static 'lib/adminlte-3.1/js/adminlte.min.js' %}"></script>
+    <!-- SweetAlert -->
+    <script src="{% static 'lib/sweetalert2-9.10.0/sweetalert2.all.min.js' %}"></script>
 
     {% block  head %}
         <!-- Block Head -->
