--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -21,6 +21,8 @@
     <script src="{% static 'lib/adminlte-3.1/js/adminlte.min.js' %}"></script>
     <!-- SweetAlert -->
     <script src="{% static 'lib/sweetalert2-9.10.0/sweetalert2.all.min.js' %}"></script>
+    <!-- My Functions -->
+    <script src="{% static 'js/functions.js' %}"></script>
 
     {% block  head %}
         <!-- Block Head -->
