--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -46,37 +46,36 @@
             var errors = '';
             {% for field in form %}
                 {% for error in field.errors %}
-                    errors += '{{ error }}\n'
+                    errors += '{{ error }}\n';
                 {% endfor %}
             {% endfor %}
             Swal.fire({
                 title: 'Error!',
                 text: errors,
-                icon: 'error',
-                confirmButtonText: 'Aceptar'
+                icon: 'error'
             });
         {% endif %}
 
         $('form').on('submit', function (e) {
             e.preventDefault();
             var parameters = $(this).serializeArray();
-
             $.ajax({
-                url: '{% url "erp:category_create" %}',
+                url: window.location.pathname,
                 type: 'POST',
                 data: parameters,
-                data_type: 'json'
+                dataType: 'json'
             }).done(function (data) {
-                if(!data.hasOwnProperty('error')){
-                    Location.href = '{{ list_url }}';
+                console.log(data);
+                if (!data.hasOwnProperty('error')) {
+                    location.href = '{{ list_url }}';
                     return false;
                 }
                 message_error(data.error);
             }).fail(function (jqXHR, textStatus, errorThrown) {
-                alert(textStatus + ' : ' + errorThrown);
+                alert(textStatus + ': ' + errorThrown);
             }).always(function (data) {
-            })
-        });
 
+            });
+        });
     </script>
 {% endblock %}
