--- a/app/core/erp/templates/category/list.html
+++ b/app/core/erp/templates/category/list.html
@@ -17,7 +17,7 @@
             <td>{{ c.name }}</td>
             <td>{{ c.desc }}</td>
             <td>
-                <button type="button" class="btn btn-success btn-sm"><i class="far fa-edit"></i></button>
+                <a href="{% url 'erp:category_update' c.id %}" class="btn btn-success btn-sm"><i class="far fa-edit"></i></a>
                 <button type="button" class="btn btn-danger btn-sm"><i class="far fa-trash-alt"></i>
                 </button>
             </td>
