--- a/app/core/erp/templates/category/list.html
+++ b/app/core/erp/templates/category/list.html
@@ -17,9 +17,11 @@
             <td>{{ c.name }}</td>
             <td>{{ c.desc }}</td>
             <td>
-                <a href="{% url 'erp:category_update' c.id %}" class="btn btn-success btn-sm"><i class="far fa-edit"></i></a>
-                <button type="button" class="btn btn-danger btn-sm"><i class="far fa-trash-alt"></i>
-                </button>
+                <a href="{% url 'erp:category_update' c.id %}" class="btn btn-success btn-sm">
+                    <i class="far fa-edit"></i></a>
+                <a href="{% url 'erp:category_delete' c.id %}" class="btn btn-danger btn-sm">
+                    <i class="far fa-trash-alt"></i>
+                </a>
             </td>
         </tr>
     {% endfor %}
