--- a/app/templates/delete.html
+++ b/app/templates/delete.html
@@ -5,7 +5,7 @@
         <div class="card card-default">
             <div class="card-header">
                 <h3 class="card-title">
-                    <i class="fas fa-plus"> </i>
+                    <i class="fas fa-trash-alt"> </i>
                     {{ title }}
                 </h3>
             </div>
@@ -41,4 +41,26 @@
             </div>
         </div>
     </form>
+    <script>
+        $('form').on('submit', function (e) {
+            e.preventDefault();
+            var parameters = $(this).serializeArray();
+            $.ajax({
+                url: window.location.pathname,
+                type: 'POST',
+                data: parameters,
+                dataType: 'json'
+            }).done(function (data) {
+                console.log(data);
+                if (!data.hasOwnProperty('error')) {
+                    location.href = '{{ list_url }}';
+                    return false;
+                }
+                message_error(data.error);
+            }).fail(function (jqXHR, textStatus, errorThrown) {
+                alert(textStatus + ': ' + errorThrown);
+            }).always(function (data) {
+            });
+        });
+    </script>
 {% endblock %}
