--- a/app/core/erp/templates/category/list.html
+++ b/app/core/erp/templates/category/list.html
@@ -1,29 +1,23 @@
 {% extends 'list.html' %}
+{% load static %}
+
+{% block head_list %}
+    <script src="{% static 'category/js/list.js' %}"></script>
+{% endblock %}
 
 {% block columns %}
     <tr>
-        <th scope="col">Número</th>
-        <th scope="col">Nombre</th>
-        <th scope="col">Descripción</th>
-        <th scope="col">Acciones</th>
+        <th scope="col" style="width: 10%">Número</th>
+        <th scope="col" style="width: 20%">Nombre</th>
+        <th scope="col" style="width: 50%">Descripción</th>
+        <th scope="col" style="width: 20%">Acciones</th>
     </tr>
 {% endblock %}
 
 
 {% block rows %}
-    {% for c in object_list %}
-        <tr>
-            <td>{{ c.id }}</td>
-            <td>{{ c.name }}</td>
-            <td>{{ c.desc }}</td>
-            <td>
-                <a href="{% url 'erp:category_update' c.id %}" class="btn btn-success btn-sm">
-                    <i class="far fa-edit"></i></a>
-                <a href="{% url 'erp:category_delete' c.id %}" class="btn btn-danger btn-sm">
-                    <i class="far fa-trash-alt"></i>
-                </a>
-            </td>
-        </tr>
-    {% endfor %}
+
 {% endblock %}
 
+{% block javascript %}
+{% endblock %}
