--- a/app/templates/delete.html
+++ b/app/templates/delete.html
@@ -1,22 +1,21 @@
-{% extends 'body.html' %}
-{% load static %}
+{% extends 'layout.html' %}
+{% load widget_tweaks %}
 {% block content %}
-    <form method="post">
-        <div class="card card-default">
+    <form method="post" action=".">
+        <div class="card card-primary">
             <div class="card-header">
                 <h3 class="card-title">
-                    <i class="fas fa-trash-alt"> </i>
+                    <i class="fas fa-trash"></i>
                     {{ title }}
                 </h3>
             </div>
-            <!-- /.card-header -->
             <div class="card-body">
                 {% csrf_token %}
                 <input type="hidden" name="action" value="{{ action }}">
                 {% if form.errors %}
                     <div class="alert alert-danger alert-dismissible">
                         <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
-                        <h4><i class="icon fa fa-ban"></i>Error al crear un nuevo registro</h4>
+                        <h5><i class="icon fas fa-ban"></i> Ha ocurrido un error al querer guardar el registro</h5>
                         <ul>
                             {% for field in form %}
                                 {% for error in field.errors %}
@@ -27,16 +26,16 @@
                     </div>
                 {% endif %}
                 <div class="alert alert-danger alert-dismissible">
-                    <h4><i class="icon fa fa-ban"></i> Notificación!</h4>
-                    ¿Está seguro que desea eliminar la categoría "{{ object.name }}"?
+                    <h5><i class="icon fas fa-ban"></i> Notificación!</h5>
+                    ¿Estas seguro de eliminar el registro nro {{ object.id }}?
                 </div>
             </div>
             <div class="card-footer">
-                <button type="submit" class="btn btn-success btn-flat">
-                    <i class="fas fa-check-circle"></i> Si, Aceptar
+                <button type="submit" class="btn btn-primary btn-flat">
+                    <i class="fas fa-save"></i> Si, aceptar
                 </button>
-                <a href="{{ list_url }}" class="btn btn-secondary btn-flat">
-                    <i class="fas fa-window-close"></i> Cancelar
+                <a href="{{ list_url }}" class="btn btn-info btn-flat">
+                    <i class="fas fa-times"></i> Cancelar
                 </a>
             </div>
         </div>
@@ -60,6 +59,7 @@
             }).fail(function (jqXHR, textStatus, errorThrown) {
                 alert(textStatus + ': ' + errorThrown);
             }).always(function (data) {
+
             });
         });
     </script>
