--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -1,26 +1,26 @@
-{% extends 'body.html' %}
-{% load static %}
+{% extends 'layout.html' %}
+{% load widget_tweaks %}
 {% block content %}
-    <form method="post">
-        <div class="card card-default">
+    <form method="post" action=".">
+        <div class="card card-primary">
             <div class="card-header">
                 <h3 class="card-title">
                     {% if action == 'add' %}
-                        <i class="fas fa-plus"> </i>
+                        <i class="fas fa-plus"></i>
                     {% else %}
-                         <i class="fas fa-edit"> </i>
+                        <i class="fas fa-edit"></i>
                     {% endif %}
+
                     {{ title }}
                 </h3>
             </div>
-            <!-- /.card-header -->
             <div class="card-body">
                 {% csrf_token %}
                 <input type="hidden" name="action" value="{{ action }}">
                 {% if form.errors %}
                     <div class="alert alert-danger alert-dismissible">
                         <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
-                        <h4><i class="icon fa fa-ban"></i>Error al crear un nuevo registro</h4>
+                        <h5><i class="icon fas fa-ban"></i> Ha ocurrido un error al querer guardar el registro</h5>
                         <ul>
                             {% for field in form %}
                                 {% for error in field.errors %}
@@ -30,17 +30,16 @@
                         </ul>
                     </div>
                 {% endif %}
-
                 {% for field in form.visible_fields %}
                     <div class="form-group">
-                        <label for="email">{{ field.label }}</label>
-                        {{ field }}
+                        <label for="email">{{ field.label }}:</label>
+                        {{ field|add_class:'form-control'|attr:'autocomplete:off' }}
                     </div>
                 {% endfor %}
             </div>
             <div class="card-footer">
                 <button type="submit" class="btn btn-primary btn-flat">
-                    <i class="fas fa-save"></i> Guardar Registro
+                    <i class="fas fa-save"></i> Guardar registro
                 </button>
             </div>
         </div>
