--- a/app/templates/list.html
+++ b/app/templates/list.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html' %}
+{% extends 'body.html' %}
 {% load static %}
 {% block head %}
     <link rel="stylesheet" href="{% static 'lib/datatables-1.10.20/css/dataTables.bootstrap4.min.css' %}"/>
@@ -14,20 +14,19 @@
     {% endblock %}
 
 {% endblock %}
-
 {% block content %}
-    <div class="card card-primary">
+    <div class="card card-default">
         <div class="card-header">
             <h3 class="card-title">
-                <i class="fas fa-search"></i>
+                <i class="fas fa-list"></i>
                 {{ title }}
             </h3>
         </div>
+        <!-- /.card-header -->
         <div class="card-body">
             <table class="table" id="data">
-                <thead>
+                <thead class="thead-light">
                 {% block columns %}
-
                 {% endblock %}
                 </thead>
                 <tbody>
@@ -38,35 +37,36 @@
             </table>
         </div>
         <div class="card-footer">
-            <a href="{{ create_url }}" class="btn btn-primary btn-flat btnTest">
-                <i class="fas fa-plus"></i> Nuevo registro
-            </a>
+                <a href="{{ create_url }}" class="btn btn-primary btnTest">
+                        <i class="fas fa-plus"></i> Nuevo Registro
+                </a>
         </div>
     </div>
 {% endblock %}
 
 {% block javascript %}
     <script type="application/javascript">
-        $(function () {
+        $(function (){
             $('#data').DataTable({
                 responsive: true,
                 autoWidth: false
             });
 
-            $('.btnTest').on('click', function () {
+            $('.btnTest').on('click',function () {
                 $.ajax({
-                    url: '{% url 'erp:category_list' %}',
+                    url: '{% url "erp:category_list" %}',
                     type: 'POST',
-                    data: {id: 1},
-                    dataType: 'json'
-                }).done(function (data) {
-                    console.log(data);
-                }).fail(function (jqXHR, textStatus, errorThrown) {
-                    alert(textStatus + ': ' + errorThrown);
-                }).always(function (data) {
+                    data: {id: 5},
+                    data_type: 'json'
+                }).done(function (data){
+                    console.log(data)
+                }).fail(function ( jqXHR,  textStatus,  errorThrown){
+                    alert(textStatus+' : ' + errorThrown);
+                }).always(function (data){
 
-                });
+                })
             });
         });
+
     </script>
 {% endblock %}
