--- a/app/core/erp/templates/category/list.html
+++ b/app/core/erp/templates/category/list.html
@@ -1,23 +1,22 @@
 {% extends 'list.html' %}
 {% load static %}
-
 {% block head_list %}
     <script src="{% static 'category/js/list.js' %}"></script>
 {% endblock %}
 
 {% block columns %}
     <tr>
-        <th scope="col" style="width: 10%">Número</th>
-        <th scope="col" style="width: 20%">Nombre</th>
-        <th scope="col" style="width: 50%">Descripción</th>
-        <th scope="col" style="width: 20%">Acciones</th>
+        <th scope="col" style="width: 10%;">Nro</th>
+        <th scope="col" style="width: 20%;">Nombre</th>
+        <th scope="col" style="width: 50%;">Descripción</th>
+        <th scope="col" style="width: 20%;">Opciones</th>
     </tr>
 {% endblock %}
-
 
 {% block rows %}
 
 {% endblock %}
 
 {% block javascript %}
+
 {% endblock %}
