--- a/app/templates/delete.html
+++ b/app/templates/delete.html
@@ -2,7 +2,7 @@
 {% load widget_tweaks %}
 {% block content %}
     <form method="post" action=".">
-        <div class="card card-primary">
+        <div class="card card-gray">
             <div class="card-header">
                 <h3 class="card-title">
                     <i class="fas fa-trash"></i>
@@ -27,14 +27,14 @@
                 {% endif %}
                 <div class="alert alert-danger alert-dismissible">
                     <h5><i class="icon fas fa-ban"></i> Notificación!</h5>
-                    ¿Estas seguro de eliminar el registro nro {{ object.id }}?
+                    ¿Estas seguro de eliminar el registro "{{ object.name }}"?
                 </div>
             </div>
             <div class="card-footer">
-                <button type="submit" class="btn btn-primary btn-flat">
+                <button type="submit" class="btn btn-success btn-flat">
                     <i class="fas fa-save"></i> Si, aceptar
                 </button>
-                <a href="{{ list_url }}" class="btn btn-info btn-flat">
+                <a href="{{ list_url }}" class="btn btn-secondary btn-flat">
                     <i class="fas fa-times"></i> Cancelar
                 </a>
             </div>
