--- a/app/templates/vtc/sidebar.html
+++ b/app/templates/vtc/sidebar.html
@@ -5,20 +5,20 @@
              alt="AdminLTE Logo"
              class="brand-image img-circle elevation-3"
              style="opacity: .8">
-        <span class="brand-text font-weight-light">AdminLTE 3</span>
+        <span class="brand-text font-weight-light">Brisbane</span>
     </a>
     <div class="sidebar">
         <div class="user-panel mt-3 pb-3 mb-3 d-flex">
             <div class="image">
-                <img src="{% static 'img/user.png' %}" class="img-circle elevation-2" alt="User Image">
+                <img src="{% static 'img/avatar.png' %}" class="img-circle elevation-2" alt="User Image">
             </div>
             <div class="info">
-                <a href="#" class="d-block">Alexander Pierce</a>
+                <a href="#" class="d-block">Fernando López</a>
             </div>
         </div>
         <nav class="mt-2">
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-                <li class="nav-header">Mantenimientos</li>
+                <li class="nav-header">Servicios</li>
                 <li class="nav-item">
                     <a href="{% url 'erp:category_list' %}" class="nav-link">
                         <i class="nav-icon fas fa-truck-loading"></i>
