--- a/app/templates/list.html
+++ b/app/templates/list.html
@@ -37,7 +37,7 @@
             </table>
         </div>
         <div class="card-footer">
-                <a href="{{ create_url }}" class="btn btn-primary btnTest">
+                <a href="{{ create_url }}" class="btn btn-secondary btnTest">
                         <i class="fas fa-plus"></i> Nuevo Registro
                 </a>
         </div>
