--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -38,7 +38,7 @@
                 {% endfor %}
             </div>
             <div class="card-footer">
-                <button type="submit" class="btn btn-success btn-flat">
+                <button type="submit" class="btn btn-secondary btn-flat">
                     <i class="fas fa-save"></i> Guardar registro
                 </button>
             </div>
@@ -59,7 +59,7 @@
             });
         {% endif %}
 
-        $('form').on('submit', function (e) {
+        /*$('form').on('submit', function (e) {
             e.preventDefault();
             var parameters = $(this).serializeArray();
             $.ajax({
@@ -79,6 +79,6 @@
             }).always(function (data) {
 
             });
-        });
+        });*/
     </script>
 {% endblock %}
