--- a/app/core/login/templates/login.html
+++ b/app/core/login/templates/login.html
@@ -20,7 +20,7 @@
 <body class="hold-transition login-page">
 <div class="login-box">
     <div class="login-logo">
-        <a href="../../index2.html"><b>Bris</b>bane</a>
+        <a href="{% url 'index' %}"><b>Bris</b>bane</a>
     </div>
     <div class="card">
         <div class="card-body login-card-body">
