--- a/app/core/login/templates/login.html
+++ b/app/core/login/templates/login.html
@@ -26,6 +26,7 @@
         <div class="card-body login-card-body">
             <p class="login-box-msg">Ingresa tus credendiales para iniciar sesión</p>
             <form action="." method="post">
+                <input type="hidden" name="next" value="{{ next }}">
                 {% csrf_token %}
                 <div class="input-group mb-3">
                     {{ form.username|add_class:'form-control'|attr:'autocomplete:off'|attr:'placeholder:Ingrese su username' }}
