--- a/app/templates/list.html
+++ b/app/templates/list.html
@@ -40,6 +40,9 @@
                 <a href="{{ create_url }}" class="btn btn-secondary btnTest">
                         <i class="fas fa-plus"></i> Nuevo Registro
                 </a>
+                <a href="{{ list_url }}" class="btn btn-success btn-flat">
+                    <i class="fas fa-sync"></i> Actualizar
+                </a>
         </div>
     </div>
 {% endblock %}
