--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -41,6 +41,9 @@
                 <button type="submit" class="btn btn-secondary btn-flat">
                     <i class="fas fa-save"></i> Guardar registro
                 </button>
+                <a href="{{ list_url }}" class="btn btn-danger btn-flat">
+                    <i class="fas fa-times"></i> Cancelar
+                </a>
             </div>
         </div>
     </form>
