--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -21,6 +21,9 @@
     <script src="{% static 'lib/adminlte-3.1/js/adminlte.min.js' %}"></script>
     <!-- SweetAlert -->
     <script src="{% static 'lib/sweetalert2-9.10.0/sweetalert2.all.min.js' %}"></script>
+    <!-- JQuery Confirm-->
+    <link rel="stylesheet" href="{% static 'lib/jquery-confirm-v3.3.4/jquery-confirm.min.css' %}">
+    <script src="{% static 'lib/jquery-confirm-v3.3.4/jquery-confirm.min.js' %}"></script>
     <!-- My Functions -->
     <script src="{% static 'js/functions.js' %}"></script>
     {% block  head %}
