--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -66,7 +66,7 @@
             e.preventDefault();
             var parameters = $(this).serializeArray();
 
-            submit_with_ajax(window.location.pathname, parameters, function () {
+            submit_with_ajax(window.location.pathname, 'Notificación', '¿Estas seguro de realizar la siguiente acción?', parameters, function () {
                 location.href = '{{ list_url }}';
             });
         });
