--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 {% load widget_tweaks %}
 {% block content %}
-    <form method="post" action=".">
+    <form method="post" action="." enctype="multipart/form-data">
         <div class="card card-gray">
             <div class="card-header">
                 <h3 class="card-title">
@@ -62,13 +62,13 @@
             });
         {% endif %}
 
-        $('form').on('submit', function (e) {
-            e.preventDefault();
-            var parameters = $(this).serializeArray();
-
-            submit_with_ajax(window.location.pathname, 'Notificación', '¿Estas seguro de realizar la siguiente acción?', parameters, function () {
-                location.href = '{{ list_url }}';
-            });
-        });
+        {#$('form').on('submit', function (e) {#}
+        {#    e.preventDefault();#}
+        {#    var parameters = $(this).serializeArray();#}
+        {##}
+        {#    submit_with_ajax(window.location.pathname, 'Notificación', '¿Estas seguro de realizar la siguiente acción?', parameters, function () {#}
+        {#        location.href = '{{ list_url }}';#}
+        {#    });#}
+        {#});#}
     </script>
 {% endblock %}
