--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -62,13 +62,13 @@
             });
         {% endif %}
 
-        {#$('form').on('submit', function (e) {#}
-        {#    e.preventDefault();#}
-        {#    var parameters = $(this).serializeArray();#}
-        {##}
-        {#    submit_with_ajax(window.location.pathname, 'Notificación', '¿Estas seguro de realizar la siguiente acción?', parameters, function () {#}
-        {#        location.href = '{{ list_url }}';#}
-        {#    });#}
-        {#});#}
+        $('form').on('submit', function (e) {
+            e.preventDefault();
+            var parameters = $(this).serializeArray();
+
+            submit_with_ajax(window.location.pathname, 'Notificación', '¿Estas seguro de realizar la siguiente acción?', parameters, function () {
+                location.href = '{{ list_url }}';
+            });
+        });
     </script>
 {% endblock %}
